# mfa

./: CMakeLists.txt
examples/: CMakeLists.txt  critical_point.sh  mfa_extend.h  run_jacobi_set.sh  run_ridge_valley_graph.sh  run_script.sh  run_script_contour.sh  run_workshop.sh  utility_function.h
examples/contour/: CMakeLists.txt  compute_critical_point_jacobi_set.cpp  find_all_root_jacobi_set.h
examples/convert/: CMakeLists.txt  write_vtk.cpp
examples/critical_point/: CMakeLists.txt  compute_critical_point.cpp  find_all_root.h  index_of_critical_point.h  root_error.cpp  unique_root_from_csv.cpp
examples/utility/: utility_function.h
